Added HTML and CSS

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,497 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/NAMU.svg">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+
+    <header class="header page__section">
+
+      <div class="container">
+        <div class="header__content">
+          <div class="top-actions grid__item">
+            <a href="#menu" class="icon icon--menu"></a>
+            <a href="#" class="logo link">
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+
+          <div class="grid grid--header">
+
+            <img
+              src="./images/header.jpg"
+              class="header__image"
+              alt="Національний музей"
+            >
+
+            <h1 class="header__title grid__item grid__item--tablet-1-3 grid__item--desktop-3-7 grid__item--tablet-row-2-2">
+              Худож<span class="header__title--border">ній</span>
+              <br>
+              музей
+            </h1>
+
+            <a href="#" class="button header__btn link grid__item grid__item--tablet-1-2 grid__item--desktop-3-4 grid__item--tablet-row-3-3">
+              <span class="header__btn--text">
+                Квитки
+              </span>
+              <span class="button--arrow header__btn--arrow"></span>
+            </a>
+
+          </div>
+
+
+
+        </div>
+      </div>
+
+      <nav class="nav header__nav" id="menu">
+        <a href="#" class="icon icon--menu-close"></a>
+
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Галерея
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Виставки та події
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Відвідування
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Стати нашим другом
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Про Нас
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Магазин
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Блог
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="side-pin">
+        <span class="side-pin__line"></span>
+        <p class="side-pin__text">
+          Події
+        </p>
+      </div>
+
+    </header>
+
+    <section class="events page__section">
+
+      <div class="container">
+
+        <h2 class="page__section-title grid__item grid__item--tablet-1-4">
+          Актуальні події
+        </h2>
+
+        <article class="event">
+          <div class="grid">
+
+            <img
+              src="./images/event_one.jpg"
+              class="event__image grid__item grid__item--tablet-1-6 grid__item--desktop-1-7 grid__item--xlarge-1-9"
+              alt="Painting with two trees"
+            >
+
+            <div class="event__text grid__item grid__item--tablet-1-4 grid__item--desktop-9-12 grid__item--xlarge-11-15">
+              <div class="event__info">
+                <p class="event__type">
+                  Виставка
+                </p>
+
+                <p class="event__date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <a href="#">
+                <h3 class="event__title">
+                  Йду і повертаюсь
+                </h3>
+              </a>
+
+              <p class="event__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+
+          </div>
+        </article>
+
+        <article class="event">
+          <div class="grid">
+
+            <img
+              src="./images/event_two.jpg"
+              class="event__image grid__item grid__item--tablet-1-6 grid__item--desktop-6-12 grid__item--xlarge-8-16"
+              alt="Painting with two trees"
+            >
+
+            <div class="event__text grid__item grid__item--tablet-1-4 grid__item--desktop-1-4 grid__item--xlarge-3-6">
+              <div class="event__info">
+                <p class="event__type">
+                  Виставка
+                </p>
+
+                <p class="event__date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <a href="#">
+                <h3 class="event__title">
+                  І спогади і мрії
+                </h3>
+              </a>
+
+              <p class="event__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+
+          </div>
+        </article>
+
+      </div>
+
+      <article class="event event--lecture">
+
+        <img
+          src="./images/lecture.jpg"
+          class="event__image"
+          alt="Painting with two trees"
+        >
+
+        <div class="event__text event__text--lecture">
+          <div class="event__info">
+            <p class="event__type">
+              Лкеція
+            </p>
+
+            <p class="event__date">
+              26.08-29.11.2019
+            </p>
+          </div>
+
+          <a href="#">
+            <h3 class="event__title event__title--lecture">
+              Від класицизму до романтизму
+            </h3>
+          </a>
+        </div>
+      </article>
+    </section>
+
+    <section class="gallery page__section">
+      <div class="container">
+
+        <h2 class="page__section-title">
+          Галерея
+        </h2>
+
+        <div class="grid gallery__container">
+
+          <img
+            src="./images/gallery_one.jpg"
+            class="gallery__image img_1 grid__item--tablet-1-6 grid__item--desktop-1-4 grid__item--xlarge-1-4"
+            alt=""
+          >
+
+          <img
+            src="./images/gallery_two.jpg"
+            class="gallery__image img_2 grid__item--tablet-1-6 grid__item--desktop-5-12 grid__item--xlarge-5-12"
+            alt=""
+          >
+
+          <img
+            src="./images/gallery_three.jpg"
+            class="gallery__image img_3 grid__item--tablet-4-6 grid__item--desktop-5-8 grid__item--xlarge-13-16"
+            alt=""
+          >
+
+          <img
+            src="./images/gallery_five.jpg"
+            class="gallery__image img_4 grid__item--tablet-1-3 grid__item--desktop-9-12 grid__item--xlarge-9-12"
+            alt=""
+          >
+
+          <img
+            src="./images/gallery_six.jpg"
+            class="gallery__image img_5 grid__item--tablet-4-6 grid__item--desktop-7-12 grid__item--xlarge-13-16"
+            alt=""
+          >
+
+          <img
+            src="./images/gallery_four.jpg"
+            class="gallery__image img_6 grid__item--tablet-1-6 grid__item--desktop-1-8 grid__item--xlarge-1-8"
+            alt=""
+          >
+
+          <div class="buttons buttons--mobile grid__item grid__item--tablet-2-5">
+            <input
+              class="buttons__radio"
+              type="radio"
+              name="gallery"
+              value="img_1"
+              id="1"
+              checked
+            >
+            <label for="1" class="buttons__btn"></label>
+            <input
+              class="buttons__radio"
+              type="radio"
+              name="gallery"
+              value="img_2"
+              id="2"
+            >
+            <label for="2" class="buttons__btn"></label>
+            <input
+              class="buttons__radio"
+              type="radio"
+              name="gallery"
+              value="img_3"
+              id="3"
+            >
+            <label for="3" class="buttons__btn"></label>
+            <input
+              class="buttons__radio"
+              type="radio"
+              name="gallery"
+              value="img_4"
+              id="4"
+            >
+            <label for="4" class="buttons__btn"></label>
+            <input
+              class="buttons__radio"
+              type="radio"
+              name="gallery"
+              value="img_5"
+              id="5"
+            >
+            <label for="5" class="buttons__btn"></label>
+            <input
+              class="buttons__radio"
+              type="radio"
+              name="gallery"
+              value="img_6"
+              id="6"
+            >
+            <label for="6" class="buttons__btn"></label>
+          </div>
+
+          <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+          <script>
+            $(document).ready(function(){
+              $('input[type="radio"]').click(function(){
+                var inputValue = $(this).attr("value");
+                var targetBox = $("." + inputValue);
+                $(targetBox).css('visibility', 'visible');
+                $(".gallery__image").not(targetBox).css('visibility', 'hidden');
+              });
+            });
+          </script>
+
+        </div>
+
+      </div>
+    </section>
+
+    <section class="subscribe">
+      <div class="container">
+
+        <div class="subscribe__content">
+          <h2 class="subscribe__title">
+            Підписка
+          </h2>
+          <p class="subscribe__paragraph">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            action="#"
+            method="POST"
+            class="subscribe__form"
+          >
+            <input
+              type="email"
+              class="subscribe__email"
+              placeholder="E-mail"
+              required
+            >
+            <button class="button button--arrow subscribe__submit"></button>
+          </form>
+        </div>
+
+      </div>
+    </section>
+
+    <footer class="footer page__section page__section--footer">
+      <div class="container">
+        <div class="grid nav grid--mobile">
+
+          <div class="footer__links grid__item grid__item--mobile-1-2 grid__item--tablet-1-1 grid__item--desktop-1-2">
+
+            <a href="#" class="logo link">
+              NA
+              <br>
+              MU
+            </a>
+
+            <div class="footer__container">
+              <a href="#">
+                <img
+                  src="./images/social/facebook.svg"
+                  class="footer__icon"
+                  alt="NAMU facebook"
+                >
+              </a>
+
+              <a href="$">
+                <img
+                  src="./images/social/instagram.svg"
+                  class="footer__icon"
+                  alt="NAMU instagram"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="t-table grid__item grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <p class="t-table__text">
+              Графік роботи
+            </p>
+
+            <p class="t-table__text">
+              <span class="t-table__time">12:00 — 20:00</span> середа
+              <br>
+              <span class="t-table__time">12:00 — 20:00</span>  четвер
+              <br>
+              <span class="t-table__time">12:00 — 20:00</span> п’ятниця
+              <br>
+              <span class="t-table__time">11:00 — 19:00</span> субота
+              <br>
+              <span class="t-table__time">11:00 — 19:00</span> неділя
+            </p>
+            <p class="t-table__text">
+              Вихідні понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div class="t-table grid__item grid__item--tablet-4-5 grid__item--desktop-5-6 grid__item--xlarge-6-7">
+            <p class="t-table__text">
+              Контакти:
+            </p>
+
+            <p class="t-table__text">
+              вул. М. Грушевського, 6;
+              <br>
+              Київ, 01001
+              <br>
+              тел. +38 (044) 278-13-57
+              <br>
+              факс +38 (044) 278-74-54
+              <br>
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+
+          <a href="#" class="footer__top-btn grid__item grid__item--mobile-2-2"></a>
+
+          <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-2-4 grid__item--desktop-7-7 grid__item--xlarge-8-9">
+            <span class="nav__border"></span>
+          </div>
+
+          <ul class="nav__list grid__item grid__item--mobile-1-1 grid__item--tablet-2-3 grid__item--desktop-8-9 grid__item--xlarge-10-11">
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Галерея
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Відвідування
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Стати нашим другом
+              </a>
+            </li>
+          </ul>
+
+          <ul class="nav__list nav__list--item-right grid__item grid__item--mobile-2-2 grid__item--tablet-4-4 grid__item--desktop-10-10 grid__item--xlarge-13-13">
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Про Нас
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Магазин
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Блог
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="" class="nav__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__bottom">
+          <p class="footer__credit">
+            Designed by Zhyriada Marina
+          </p>
+          <a href="#" class="footer__terms">
+            Copyright © 2019. All Rights Reserved.
+          </a>
+        </div>
+
+      </div>
+    </footer>
+
   </body>
 </html>
