Added alt to images and fixed anchor links

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,6 @@
 
           </div>
 
-
-
         </div>
       </div>
 
@@ -55,43 +53,43 @@
 
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#gallery" class="nav__link">
               Галерея
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#events" class="nav__link">
               Виставки та події
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#" class="nav__link">
               Відвідування
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#" class="nav__link">
               Стати нашим другом
             </a>
           </li>
 
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#" class="nav__link">
               Про Нас
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#" class="nav__link">
               Магазин
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#" class="nav__link">
               Блог
             </a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">
+            <a href="#" class="nav__link">
               Контакти
             </a>
           </li>
@@ -107,7 +105,7 @@
 
     </header>
 
-    <section class="events page__section">
+    <section id="events" class="events page__section">
 
       <div class="container">
 
@@ -190,7 +188,7 @@
         <img
           src="./images/lecture.jpg"
           class="event__image"
-          alt="Painting with two trees"
+          alt="Orange background"
         >
 
         <div class="event__text event__text--lecture">
@@ -213,7 +211,7 @@
       </article>
     </section>
 
-    <section class="gallery page__section">
+    <section id="gallery" class="gallery page__section">
       <div class="container">
 
         <h2 class="page__section-title">
@@ -225,37 +223,37 @@
           <img
             src="./images/gallery_one.jpg"
             class="gallery__image img_1 grid__item--tablet-1-6 grid__item--desktop-1-4 grid__item--xlarge-1-4"
-            alt=""
+            alt="Woman in Ukrainian clothes"
           >
 
           <img
             src="./images/gallery_two.jpg"
             class="gallery__image img_2 grid__item--tablet-1-6 grid__item--desktop-5-12 grid__item--xlarge-5-12"
-            alt=""
+            alt="Old houses"
           >
 
           <img
             src="./images/gallery_three.jpg"
             class="gallery__image img_3 grid__item--tablet-4-6 grid__item--desktop-5-8 grid__item--xlarge-13-16"
-            alt=""
+            alt="Painting of geese"
           >
 
           <img
             src="./images/gallery_five.jpg"
             class="gallery__image img_4 grid__item--tablet-1-3 grid__item--desktop-9-12 grid__item--xlarge-9-12"
-            alt=""
+            alt="Painting of the sea"
           >
 
           <img
             src="./images/gallery_six.jpg"
             class="gallery__image img_5 grid__item--tablet-4-6 grid__item--desktop-7-12 grid__item--xlarge-13-16"
-            alt=""
+            alt="Painting of people"
           >
 
           <img
             src="./images/gallery_four.jpg"
             class="gallery__image img_6 grid__item--tablet-1-6 grid__item--desktop-1-8 grid__item--xlarge-1-8"
-            alt=""
+            alt="A girl on a bench"
           >
 
           <div class="buttons buttons--mobile grid__item grid__item--tablet-2-5">
@@ -436,17 +434,17 @@
 
           <ul class="nav__list grid__item grid__item--mobile-1-1 grid__item--tablet-2-3 grid__item--desktop-8-9 grid__item--xlarge-10-11">
             <li class="nav__item">
-              <a href="" class="nav__link">
+              <a href="#gallery" class="nav__link">
                 Галерея
               </a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">
+              <a href="#events" class="nav__link">
                 Виставки та події
               </a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">
+              <a href="#" class="nav__link">
                 Відвідування
               </a>
             </li>
@@ -459,22 +457,22 @@
 
           <ul class="nav__list nav__list--item-right grid__item grid__item--mobile-2-2 grid__item--tablet-4-4 grid__item--desktop-10-10 grid__item--xlarge-13-13">
             <li class="nav__item">
-              <a href="" class="nav__link">
+              <a href="#" class="nav__link">
                 Про Нас
               </a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">
+              <a href="#" class="nav__link">
                 Магазин
               </a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">
+              <a href="#" class="nav__link">
                 Блог
               </a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">
+              <a href="#" class="nav__link">
                 Контакти
               </a>
             </li>
