--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,6 @@
   </head>
   <body class="page__body">
     <header class="header page__header">
-      <div class="header__photo">
-        <img
-          class="header__img"
-          src="./images/museum.jpg"
-          alt="photo"
-        >
-        <h1 class="header__title-stroke">ній</h1>
-      </div>
       <div class="container page__container">
         <div class="header__content">
           <div class="top-action">
@@ -63,6 +55,14 @@
               </div>
             </div>
           </div>
+          <div class="header__photo">
+            <img
+              class="header__img"
+              src="./images/museum.jpg"
+              alt="photo"
+            >
+            <h1 class="header__title-stroke">ній</h1>
+          </div>
         </div>
         <div class="header__mark">
           <span class="header__mark-line"></span>
@@ -70,51 +70,69 @@
         </div>
       </div>
     </header>
-    <!-- <main class="main">
-      <section class="current-events">
+    <main class="main">
+      <section class="current-events page__current-events">
         <div class="container page__container">
           <h2 class="page__section-title">Актуальні події</h2>
           <article class="event current-events__event">
-              <div class="event__img">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--tablet-1-6 grid__item--desktop-1-7 grid__item--large-1-9">
                 <img
                   class="event__photo"
                   src="./images/event1.jpg"
                   alt="picture"
                 >
               </div>
-              <div class="event-description">
-                <div class="event__schedule">
-                  <span class="event__name">ВИСТАВКА</span>
-                  <span class="event__date">26.08-29.11.2019</span>
+              <div class="grid__item grid__item--center grid__item--tablet-1-3 grid__item--desktop-9-12 grid__item--large-11-14">
+                <div class="event__info">
+                  <div class="event__schedule">
+                    <span class="event__name">ВИСТАВКА</span>
+                    <span class="event__date">26.08-29.11.2019</span>
+                  </div>
+                  <h3 class="event__title">Йду і повертаюсь</h3>
+                  <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
                 </div>
-                <h3 class="event__title">Йду і повертаюсь</h3>
-                <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
               </div>
+            </div>
           </article>
           <article class="event current-events__event">
             <div class="grid grid--desktop">
-              <div class="grid__item grid__item--1-4 ">
-                <div class="event__schedule">
-                  <span class="event__name">ВИСТАВКА</span>
-                  <span class="event__date">26.08-29.11.2019</span>
-                </div>
-                <h3 class="event__title">І спогади і мрії</h3>
-                <p class="event__description">Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              <div class="grid__item grid__item--tablet-1-6 grid__item--desktop-6-12 grid__item--large-8-16 grid__item--reverse">
+                <img
+                  class="event__photo"
+                  src="./images/event2.jpg"
+                  alt="picture"
+                >
               </div>
-              <div class="grid__item grid__item--6-12">
-                <div class="event__photo-container">
-                  <img
-                    class="event__photo"
-                    src="./images/event2.jpg"
-                    alt="picture"
-                  >
+              <div class="grid__item grid__item--center grid__item--tablet-1-3 grid__item--desktop-1-4 grid__item--large-3-6">
+                <div class="event__info">
+                  <div class="event__schedule">
+                    <span class="event__name">ВИСТАВКА</span>
+                    <span class="event__date">26.08-29.11.2019</span>
+                  </div>
+                  <h3 class="event__title">І спогади і мрії</h3>
+                  <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
                 </div>
               </div>
             </div>
           </article>
         </div>
       </section>
-    </main> -->
+      <section class="lecture page__lecture">
+        <img
+          class="lecture__photo"
+          src="./images/lecture.jpg"
+          alt="Lecture picture"
+        >
+        <div class="lecture-info lecture__lecture-info">
+          <div class="lecture-info__title">
+            <span class="lecture-info__name">ЛЕКЦІЯ</span>
+            <span class="lecture-info__date">26/08/2019 - 11:00</span>
+          </div>
+          <h3 class="lecture-info__description">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
