--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
   <body class="page__body">
     <header class="header">
       <div class="header__nav">
-        <a href="#" class="header__menu-opener"></a>
-        <a href="#" class="logo">
+        <a href="#menu" class="header__menu-opener"></a>
+        <a href="/" class="logo">
           <span class="logo__txt">
             na
             <br>
@@ -31,6 +31,64 @@
         </a>
       </div>
     </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <a href="#" class="header__menu-opener"></a>
+          <a href="/" class="logo">
+            <span class="logo__txt">
+              na
+              <br>
+              mu
+            </span>
+          </a>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">
+                Галерея
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#events" class="menu__link">
+                Виставка та події
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#lecture" class="menu__link">
+                Відвідування
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscribe" class="menu__link">
+                Стати нашим другом
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscribe" class="menu__link">
+                Про нас
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#shop" class="menu__link">
+                Магазин
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscribe" class="menu__link">
+                Блог
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <section class="art-museum">
       <h1 class="art-museum__name">
@@ -50,7 +108,7 @@
       </div>
     </section>
 
-    <section class="relevant-events">
+    <section class="relevant-events" id="events">
       <h2 class="relevant-events__name">
         Актуальні події
       </h2>
@@ -89,7 +147,7 @@
         src="./images/photo03.png"
         alt="classicism"
       >
-      <div class="classicism__lecture">
+      <div class="classicism__lecture" id="lecture">
         <div class="classicism__block">
           <span class="classicism__left">ЛЕКЦІЯ</span>
           <span class="classicism__right">26/08/2019 - 11:00</span>
@@ -98,7 +156,7 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <h2 class="gallery__name">Галерея</h2>
       <img
         src="./images/g01.png"
@@ -112,7 +170,7 @@
       >
     </section>
 
-    <section class="subscription">
+    <section class="subscription" id="subscribe">
       <div class="subscription__block">
         <h2 class="subscription__name">
           Підписка
@@ -150,7 +208,7 @@
         </div>
       </div>
 
-      <div class="footer__contacts contacts">
+      <div class="footer__contacts contacts" id="contacts">
         <p>Графік роботи</p>
         <p>Контакти:</p>
         <p>
