add gallery and subscription

--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,174 @@
           <h3 class="lecture-info__description">Від класицизму до романтизму</h3>
         </div>
       </section>
+
+      <section class="gallery page__gallery">
+        <div class="container page__container">
+          <h2 class="page__section-title">Галерея</h2>
+          <div class="gallery__wrapper">
+            <div class="grid">
+              <div class="grid__item grid__item--tab-1-3 grid__item--desktop-1-4 grid__item--large-1-4">
+                <img
+                  class="gallery__img gallery__img--1"
+                  src="./images/gallery1.jpg"
+                  alt="photo1"
+                  id="photo1"
+                >
+              </div>
+              <div class="grid__item grid__item--desktop-5-12 grid__item--large-5-12">
+                <img
+                  class="gallery__img gallery__img--2"
+                  src="./images/gallery2.jpg"
+                  alt="photo2"
+                >
+              </div>
+              <div class="grid__item grid__item--large-13-16">
+                <img
+                  class="gallery__img gallery__img--3"
+                  src="./images/gallery3.jpg"
+                  alt="photo3"
+                >
+              </div>
+              <div class="grid__item grid__item--desktop-1-7 grid__item--large-1-8">
+                <img
+                  class="gallery__img gallery__img--4"
+                  src="./images/gallery4.jpg"
+                  alt="photo4"
+                  id="photo4"
+                >
+              </div>
+              <div class="grid__item grid__item--desktop-8-12 grid__item--large-9-12">
+                <img
+                  class="gallery__img gallery__img--5"
+                  src="./images/gallery5.jpg"
+                  alt="photo5"
+                >
+              </div>
+              <div class="grid__item grid__item--large-13-16">
+                <img
+                  class="gallery__img gallery__img--6"
+                  src="./images/gallery6.jpg"
+                  alt="photo6"
+                >
+              </div>
+            </div>
+          </div>
+          <div class="gallery__slider slider">
+            <input
+              class="slider__input slider__input--1"
+              type="radio"
+              id="1"
+              name="radio"
+              checked
+            >
+            <label class="slider__label" for="1"></label>
+
+            <input
+              class="slider__input slider__input--2"
+              type="radio"
+              id="2"
+              name="radio"
+            >
+            <label class="slider__label" for="2"></label>
+
+            <input
+              class="slider__input slider__input--3"
+              type="radio"
+              id="3"
+              name="radio"
+            >
+            <label class="slider__label" for="3"></label>
+
+            <input
+              class="slider__input slider__input--4"
+              type="radio"
+              id="4"
+              name="radio"
+            >
+            <label class="slider__label" for="4"></label>
+
+          </div>
+        </div>
+      </section>
+      <section class="subscription page__subscription">
+        <div class="container page__container">
+          <div class="subscription__wrap">
+            <h2 class="subscription__title">Підписка</h2>
+            <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <form class="subscription__form" action="">
+              <input
+                class="subscription__input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              >
+              <button class="btn-arrow btn-arrow--orange" type="submit"></button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container page__container">
+        <div class="footer__icon">
+          <a class="header__logo" href="#">
+            NA
+            <br>
+            MU
+          </a>
+          <div class="footer__media">
+            <a href="#" target="blank">
+              <img
+                class="footer__media-icon"
+                src="./images/facebook.svg"
+                alt="facebook"
+              >
+            </a>
+            <a href="#" target="blank">
+              <img
+                class="footer__media-icon"
+                src="./images/insta.svg"
+                alt="instagram"
+              >
+            </a>
+          </div>
+        </div>
+        <div class="footer__info">
+          <div class="footer__work-time">
+            <p class="footer__info-title">Графік роботи</p>
+            <ul class="scheduling">
+              <li>
+                <strong>12:00 — 20:00</strong>
+                середа
+              </li>
+              <li>
+                <strong>12:00 — 20:00</strong>
+                четвер
+              </li>
+              <li>
+                <strong>12:00 — 20:00</strong>
+                п’ятниця
+              </li>
+              <li>
+                <strong>11:00 — 19:00</strong>
+                субота
+              </li>
+              <li>
+                <strong>11:00 — 19:00</strong>
+                неділя
+              </li>
+            </ul>
+            <p class="footer__work-description">
+              <strong>Вихідні</strong>
+              понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
