--- a/src/index.html
+++ b/src/index.html
@@ -16,90 +16,76 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body class="page">
-    <header class="header" hidden>
-      <div class="header__photo"></div>
+    <header class="header">
       <div class="container">
-        <nav class="nav header__nav">
-          <a href="#menu">
-            <div class="nav__menu"></div>
-          </a>
+        <div class="header__content">
+          <nav class="nav header__nav">
+            <a href="#menu">
+              <div class="nav__menu"></div>
+            </a>
 
-          <a href="#" class="nav__logo">
-            <h1 class="logo">
-              NA
-              <br>
-              MU
-            </h1>
-          </a>
+            <a href="#" class="nav__logo">
+              <h1 class="logo">
+                NA
+                <br>
+                MU
+              </h1>
+            </a>
 
-          <div class="box"></div>
+            <div class="box"></div>
 
-        </nav>
-
-        <h2 class="header__title">
-          ХУДОЖ<span class="header__title--end">НІЙ</span>
-          <br>
-          МУЗЕЙ
-        </h2>
-
-
-        <a href="#" class="button header__button">
-          <div class="button__text">
-            КВИТКИ
-          </div>
-
-          <div class="button__arrow">
-            <img src="./images/arrow.png" alt="arrow">
-          </div>
-        </a>
-
+          </nav>
+        </div>
       </div>
     </header>
 
     <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
-          <a href="#" class="menu__logo">
-            <h1 class="logo">
-              NA
-              <br>
-              MU
-            </h1>
-          </a>
+          <div class="menu__logo-container">
+            <a href="#" class="menu__logo">
+              <h1 class="logo">
+                NA
+                <br>
+                MU
+              </h1>
+            </a>
 
-          <ul class="menu__list">
-            <li class="menu__li">
-              <a href="" class="menu__link">Галерея</a>
-            </li>
+            <ul class="menu__list">
+              <li class="menu__li">
+                <a href="" class="menu__link">Галерея</a>
+              </li>
 
-            <li class="menu__li">
-              <a href="" class="menu__link">Виставки та події</a>
-            </li>
+              <li class="menu__li">
+                <a href="" class="menu__link">Виставки та події</a>
+              </li>
 
-            <li class="menu__li">
-              <a href="" class="menu__link">Відвідування</a>
-            </li>
+              <li class="menu__li">
+                <a href="" class="menu__link">Відвідування</a>
+              </li>
 
-            <li class="menu__li">
-              <a href="" class="menu__link">Стати нашим другом</a>
-            </li>
+              <li class="menu__li">
+                <a href="" class="menu__link">Стати нашим другом</a>
+              </li>
 
-            <li class="menu__li">
-              <a href="" class="menu__link">Про Нас</a>
-            </li>
+              <li class="menu__li">
+                <a href="" class="menu__link">Про Нас</a>
+              </li>
 
-            <li class="menu__li">
-              <a href="" class="menu__link">Магазин</a>
-            </li>
+              <li class="menu__li">
+                <a href="" class="menu__link">Магазин</a>
+              </li>
 
-            <li class="menu__li">
-              <a href="" class="menu__link">Блог</a>
-            </li>
+              <li class="menu__li">
+                <a href="" class="menu__link">Блог</a>
+              </li>
 
-            <li class="menu__li">
-              <a href="" class="menu__link">Контакти</a>
-            </li>
-          </ul>
+              <li class="menu__li">
+                <a href="" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+
 
           <a href="#search-bar">
             <div class="menu__loop"></div>
@@ -112,19 +98,115 @@
     </nav>
 
     <main class="page__content">
-      <section class="section page__section">
+
+      <section class="section head">
+        <div class="container">
+          <div class="grid grid--desktop">
+            <div class="grid__item grid__item--3-6">
+              <h2 class="head__title">
+                ХУДОЖ<span class="head__title--end">НІЙ</span>
+                <br>
+                МУЗЕЙ
+              </h2>
+
+              <a href="#" class="button header__button">
+                <div class="button__text"></div>
+
+                <div class="button__arrow"></div>
+              </a>
+            </div>
+
+            <div class="grid__item grid__item--7-12">
+              <div class="head__photo-container">
+                <img
+                  src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+                  alt="head photo"
+                  class="head__photo"
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section actual">
         <div class="container">
           <h3 class="section__title">Актуальні події</h3>
-          <div class="place place__actual">
-            <div class="grid grid--desktop">
-              <div class="grid__item grid__item--1-9">
-                <div class="place__photo">
+
+          <div class="place">
+            <div class="place__content">
+              <div class="grid grid--desktop">
+                <div class="grid__item grid__item--1-7">
                   <img
                     src="./images/Rectangle 2.2.png"
-                    alt="picture"
+                    alt=""
                     class="place__photo"
                   >
                 </div>
+
+                <div class="grid__item grid__item--9-12">
+                  <div class="place__about">
+                    <div class="place__about-photo">
+                      <div class="place__about-photo-name">ВИСТАВКА</div>
+
+                      <div class="place__about-photo-date">26.08-29.11.2019</div>
+                    </div>
+
+                    <h4 class="place__about-title">
+                      Йду і повертаюсь
+                      <div class="orange"></div>
+                    </h4>
+
+                    <div class="place__about-content">
+                      Національний Художній Музей України презентує
+                      <br>
+                      унікальну частину колекції Градобанку -
+                      <br>
+                      українське мистецтво другої половини
+                      <br>
+                      1980-1995 років.
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+            <div class="place__content">
+              <div class="grid grid--desktop">
+                <div class="grid__item grid__item--6-12">
+                  <img
+                    src="./images/place2.png"
+                    alt="place photo"
+                    class="place__photo"
+                  >
+                </div>
+
+                <div class="grid__item grid__item--1-4">
+                  <div class="place__about">
+                    <div class="place__about-photo">
+                      <div class="place__about-photo-name">ВИСТАВКА</div>
+
+                      <div class="place__about-photo-date">26.08-29.11.2019</div>
+                    </div>
+
+                    <h4 class="place__about-title">
+                      Йду і повертаюсь
+                      <div class="orange"></div>
+                    </h4>
+
+                    <div class="place__about-content">
+                      Національний Художній Музей України презентує
+                      <br>
+                      унікальну частину колекції Градобанку -
+                      <br>
+                      українське мистецтво другої половини
+                      <br>
+                      1980-1995 років.
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
@@ -132,7 +214,7 @@
 
       </section>
 
-      <section class="section page__section" id="gallery">
+      <section class="section gallery" id="gallery">
         <div class="container">
           <h3 class="section__title">Галерея</h3>
 
