--- a/src/index.html
+++ b/src/index.html
@@ -362,7 +362,7 @@
             факс +38(044)278-74-54
           </a>
           <br>
-          <a href="mailto: e-mail: info@namu.kiev.ua" class="footer__contact-link">
+          <a href="mailto: info@namu.kiev.ua" class="footer__contact-link">
             e-mail: info@namu.kiev.ua
           </a>
         </p>
@@ -371,8 +371,8 @@
         <div class="footer__line grid__item grid__item--mobile--1-2 grid__item--tablet--2-5 grid__item--desktop--7-7">
         </div>
         <ul class="footer__nav grid__item grid__item--tablet--2-3 grid__item--desktop--8-9 grid__item--large--10-11">
-          <li class="footer__links"><a href="#">Галерея</a></li>
-          <li class="footer__links"><a href="#"> Виставки та події</a></li>
+          <li class="footer__links"><a href="#gallery">Галерея</a></li>
+          <li class="footer__links"><a href="#events"> Виставки та події</a></li>
           <li class="footer__links"><a href="#">Відвідування</a></li>
           <li class="footer__links"><a href="#">Стати нашим другом</a></li>
         </ul>
@@ -380,7 +380,7 @@
           <li class="footer__links"><a href="#">Про Нас</a></li>
           <li class="footer__links"><a href="#">Магазин</a></li>
           <li class="footer__links"><a href="#">Блог</a></li>
-          <li class="footer__links"><a href="#">Контакти</a></li>
+          <li class="footer__links"><a href="#contact">Контакти</a></li>
         </ul>
         <div class="footer__secondary-text grid__item grid__item--mobile--1-2 grid__item--tablet--1-6 grid__item--desktop--1-12 grid__item--desktop--1-16">
           <p class="footer__design-details">
