--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,9 @@
 
     <section class="art-museum">
       <h1 class="art-museum__name">
-        ХУДОЖНІЙ МУЗЕЙ
+        ХУДОЖ<span class="art-museum__span">НІЙ</span>
+        <br>
+        МУЗЕЙ
       </h1>
       <div class="art-museum__button button">
         <div class="button__tickets">
