--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <nav class="nav" id="nav">
+    <nav class="nav page__nav" id="nav">
       <ul class="nav__list">
         <li class="nav__logo">
           <a href="#" class="namu nav__logo-link">
